--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-terser": "^2.1.0",
     "gulp-tinypng-compress": "^1.2.5",
     "gulp-webp": "^4.0.1",
+    "node-polyfill-webpack-plugin": "^4.0.0",
     "sass": "^1.64.2",
     "webpack": "^5.88.2",
     "webpack-stream": "^7.0.0"
